--- a/graphics/break.html
+++ b/graphics/break.html
@@ -6,560 +6,13 @@
 	   All rights reserved, reuse not permitted.
 	  -->
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:700,600|Work+Sans:400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
-    <style>
-         :root {
-            --lowInkOrange: #F37002;
-            /*low ink orange is F37002 in case i forget*/
-            --containerBG: #111;
-            --BGColor: #191919;
-            --textColor: #fff;
-            --largeTextOnBGColor: #fff;
-            --mapsSceneTextColor: #fff;
-        }
-
-        body {
-            width: 1920px;
-            height: 1080px;
-            overflow: hidden;
-            /*OBS is a bastard and hopefully this important tag fixes that*/
-            background-color: var(--BGColor) !important;
-            margin: 0;
-            font-family: 'Montserrat', 'Kosugi Maru', sans-serif;
-        }
-
-        .logo {
-            width: 650px;
-            height: 675px;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            left: 150px;
-            filter: drop-shadow(0px 0px 10px var(--lowInkOrange));
-        }
-
-        #squidarrows {
-            left: 0px;
-            bottom: 0px;
-            position: absolute;
-            height: 2160px;
-            z-index: -10;
-        }
-
-        #squidarrowswrapper {
-            position: absolute;
-            overflow: hidden;
-            width: 1920px;
-            height: 1080px;
-            top: 0;
-            left: 0;
-        }
-
-        .mainSceneGrid {
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-            position: absolute;
-            right: 150px;
-            width: 800px;
-            top: 50%;
-            transform: translateY(-50%);
-            height: 750px;
-            justify-items: center;
-            align-items: center;
-        }
-
-        .mainSceneBigText {
-            color: var(--textColor);
-            font-size: 10em;
-            font-family: 'lemon/milk';
-            position: relative;
-            top: -25px;
-            left: 15px;
-        }
-
-        .mainSceneBigBG {
-            background-color: var(--containerBG);
-            width: 700px;
-            height: 170px;
-            filter: drop-shadow(-10px 10px 0 var(--lowInkOrange));
-        }
-
-        .mainSceneBG {
-            height: 49px;
-            background-color: var(--containerBG);
-            padding: 4px 0;
-        }
-
-        #breakFlavorTextBG {
-            width: 100px;
-        }
-
-        .breakMainSmallText {
-            color: var(--textColor);
-            font-weight: 700;
-            font-size: 2.5em;
-            margin-left: 10px;
-        }
-
-        #measurer,
-        .measurer {
-            font-size: 2.5rem;
-            font-weight: 700;
-            z-index: 99999;
-            /*begone*/
-            position: absolute;
-            visibility: visible;
-        }
-
-        .mainSceneIconBG {
-            background-color: var(--lowInkOrange);
-            height: 57px;
-            width: 57px;
-            float: right;
-            position: relative;
-        }
-
-        .mainSceneIcon {
-            height: 45px;
-            width: 45px;
-            position: relative;
-            top: 6px;
-            left: 6px;
-        }
-
-        .mainSceneIconRaster {
-            width: 45px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .mainSceneMusic {
-            display: block;
-        }
-
-        .withIcon {
-            margin-right: 57px;
-        }
-
-        .mainSceneWrapper {
-            filter: drop-shadow(-3px 3px 0 var(--lowInkOrange));
-        }
-
-        #topBar {
-            display: grid;
-            grid-template-columns: 1fr 8fr 8fr 1fr;
-            align-content: center;
-            align-items: center;
-            width: 1920px;
-            height: 80px;
-            background-color: var(--containerBG);
-            /*filter: drop-shadow(0px 5px 0 var(--lowInkOrange));*/
-            border-bottom: 5px solid var(--lowInkOrange);
-            position: absolute;
-            left: 0;
-            top: -80px;
-            z-index: 9999;
-        }
-
-        .smallIcon {
-            height: 60px;
-            margin-left: 30px;
-        }
-
-        #topBarText {
-            color: var(--textColor);
-            font-size: 2.5em;
-            font-weight: 700;
-        }
-
-        #topBarInfoText {
-            color: var(--textColor);
-            font-size: 2.5em;
-            font-weight: 700;
-            position: absolute;
-            right: 100px;
-            justify-self: end;
-        }
-
-        #topBarInfoIcon {
-            position: absolute;
-            right: 30px;
-            height: 60px;
-        }
-
-        .versus {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            margin-top: 100px;
-            color: var(--largeTextOnBGColor);
-            font-family: 'lemon/milk';
-            font-size: 10em;
-            text-shadow: 0px 0px 10px var(--lowInkOrange);
-        }
-
-        #teamAInfo {
-            left: 250px;
-        }
-
-        #teamBInfo {
-            right: 250px;
-        }
-
-        .teamInfo {
-            width: 500px;
-            height: 600px;
-            position: absolute;
-            top: 350px;
-            background-color: var(--containerBG);
-            filter: drop-shadow(-5px 5px 0px var(--lowInkOrange));
-            overflow: hidden;
-        }
-
-        .teamImage {
-            width: 400px;
-            height: 400px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            opacity: 0.25;
-            border-radius: 50%;
-            z-index: -1;
-            background-position: 50% 50%;
-            background-size: cover;
-        }
-
-        .rightAlign {
-            text-align: right;
-        }
-
-        .teamName {
-            color: var(--textColor);
-            font-weight: 700;
-            font-size: 2.75em;
-            margin-top: 30px;
-            margin-bottom: 30px;
-            margin-left: 25px;
-        }
-
-        .teamPlayer {
-            color: var(--textColor);
-            font-weight: 700;
-            font-size: 2em;
-            margin-top: 15px;
-            margin-left: 35px;
-            margin-right: 35px;
-            height: 43px;
-        }
-
-        .sceneTitle {
-            font-family: 'lemon/milk';
-            text-align: center;
-            color: var(--largeTextOnBGColor);
-            position: absolute;
-            width: 100%;
-            text-shadow: 0px 0px 10px var(--lowInkOrange);
-        }
-
-        .nextUpTitle {
-            font-size: 7em;
-            top: 150px;
-        }
-
-        .nextMapsTitle {
-            font-size: 5em;
-            top: 120px;
-        }
-
-        .sceneWrapper {
-            height: 1080px;
-            width: 1920px;
-            position: absolute;
-            top: -1080px;
-            left: 0;
-        }
-
-        .upcomingStagesGrid {
-            height: 700px;
-            display: grid;
-            align-self: center;
-            margin: 0 auto;
-            position: relative;
-            gap: 20px;
-            width: 1700px;
-            top: 275px;
-            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-            grid-template-rows: 1fr;
-            filter: drop-shadow(-5px 5px 0px var(--lowInkOrange));
-        }
-
-        .stageBox {
-            background-color: var(--containerBG);
-            overflow: hidden;
-            position: relative;
-        }
-
-        .mapsStagePic {
-            height: 700px;
-            z-index: -1;
-            margin-left: -500px;
-        }
-
-        .mapsStagePic3Maps {
-            margin-left: -400px !important;
-        }
-
-        .mapsStagePic5Maps {
-            margin-left: -460px !important;
-        }
-
-        .mapsModeName {
-            color: var(--mapsSceneTextColor);
-            position: absolute;
-            left: 10px;
-            bottom: 15px;
-            font-size: 1.5em;
-            z-index: 10;
-        }
-
-        .mapsStageName {
-            color: var(--mapsSceneTextColor);
-            position: absolute;
-            left: 10px;
-            bottom: 50px;
-            font-size: 2em;
-            z-index: 10;
-        }
-
-        .mapsWinnerName {
-            color: var(--mapsSceneTextColor);
-            position: absolute;
-            right: 10px;
-            top: 15px;
-            font-size: 2em;
-            z-index: 10;
-            text-align: right;
-            display: -webkit-box;
-            -webkit-line-clamp: 4;
-            -webkit-box-orient: vertical;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-            max-height: 4.8em;
-            top: 10px;
-            word-break: break-word;
-        }
-
-        .mapsNameGradient {
-            position: absolute;
-            height: 250px;
-            background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%);
-            bottom: 0;
-            left: 0;
-            width: 1000px;
-            z-index: 0;
-        }
-
-        .winnerGradient {
-            position: absolute;
-            height: 250px;
-            background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 100%);
-            top: 0;
-            left: 0;
-            width: 1000px;
-            z-index: 0;
-        }
-
-        .mainSceneRoundTimer, .mainSceneMusic {
-            height: 0;
-            margin-top: -57px;
-        }
-
-        .scheduleGrid {
-            width: 1200px;
-            height: 700px;
-            position: absolute;
-            top: 275px;
-            display: grid;
-            grid-template-rows: repeat(6, 1fr);
-            gap: 25px;
-        }
-
-        .scheduleItem {
-            background-color: var(--containerBG);
-            filter: drop-shadow(-5px 5px 0px var(--lowInkOrange));
-            color: white;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            padding: 0 15px;
-        }
-
-        .scheduleRoundName {
-            justify-self: flex-start;
-            flex-grow: 1;
-            font-size: 2.5em;
-        }
-
-        .scheduleTime {
-            justify-self: flex-end;
-            text-align: center;
-        }
-
-        .scheduleRoundTime {
-            font-size: 3em;
-            margin-top: -5px;
-            margin-left: 15px;
-            width: 175px;
-        }
-
-        .scheduleRoundTimes {
-            display: flex;
-            flex-direction: row;
-        }
-
-        .scheduleRoundStatus {
-            font-size: 1.5em;
-        }
-
-        #sceneSchedule {
-            display: flex;
-            justify-content: center;
-        }
-
-        .ampm {
-            font-size: 0.4em;
-        }
-
-        .scheduleZoneLabels {
-            color: white;
-            position: absolute;
-            top: 235px;
-            right: 370px;
-            font-size: 0.75em;
-            text-align: center;
-        }
-
-        span.pronoun {
-			font-size: 20px;
-			background-color: var(--lowInkOrange);
-			padding: 0 5px;
-			color: white;
-		}
-
-        .ipl-brand {
-            position: absolute;
-            width: 400px;
-            bottom: 35px;
-            left: 760px;
-            opacity: 1;
-        }
-    </style>
+	<link rel="stylesheet" href="styles/break.css">
 </head>
 
 <body>
-    <div id="mainScene" class="sceneWrapper">
-        <img class="logo" src="Inkgaugelogo-li-coolbg-nomargin.png">
-        <div class="mainSceneGrid">
-            <div class="mainSceneBigBG">
-                <div class="mainSceneBigText">LOW INK</div>
-            </div>
-            <div class="mainSceneFlavorText mainSceneWrapper">
-                <div class="mainSceneBG" id="breakFlavorTextBG">
-                    <fitted-text class="breakMainSmallText" id="breakFlavorText" max-width="720" text="OWo"></fitted-text>
-                </div>
-            </div>
-            <div class="mainSceneRoundTimer mainSceneWrapper">
-                <div class="mainSceneIconBG">
-                    <img src="icons/timer.svg" class="mainSceneIcon">
-                </div>
-                <div class="mainSceneBG withIcon" id="mainSceneRoundTimerBG">
-                    <fitted-text class="breakMainSmallText" id="mainSceneRoundTimerText" max-width="720" text="uWu"></fitted-text>
-                </div>
-            </div>
-            <div class="mainSceneCasterNames mainSceneWrapper">
-                <div class="mainSceneIconBG">
-                    <img src="icons/microphone.svg" class="mainSceneIcon">
-                </div>
-                <div class="mainSceneBG withIcon" id="breakCasterNamesBG">
-                    <fitted-text useInnerHTML class="breakMainSmallText" id="breakCasterNames" max-width="720" text="uWu"></fitted-text>
-                </div>
-            </div>
-            <div class="mainSceneSupport mainSceneWrapper">
-                <div class="mainSceneIconBG">
-                    <img src="icons/logoTwitter.png" class="mainSceneIconRaster" id="socialIcon">
-                </div>
-                <div class="mainSceneBG withIcon" id="breakSupportBG">
-                    <fitted-text class="breakMainSmallText" id="breakSupport" max-width="720" text="uWu"></fitted-text>
-                </div>
-            </div>
-            <div class="mainSceneMusic mainSceneWrapper" id="musicWrapper">
-                <div class="mainSceneIconBG">
-                    <img src="icons/music.svg" class="mainSceneIcon">
-                </div>
-                <div class="mainSceneBG withIcon" id="breakSongTextBG">
-                    <fitted-text class="breakMainSmallText" id="breakSongText" max-width="720" text="AwA"></fitted-text>
-                </div>
-            </div>
-        </div>
-        <img class="ipl-brand" src="ipl-powered-inkling.png"></div>
-    </div>
 
-    <div id="topBar">
-        <img class="smallIcon" src="Inkgaugelogo-li-coolbg-notext.png">
-        <fitted-text id="topBarText" align="left" max-width="840"></fitted-text>
-        <fitted-text id="topBarInfoText" useInnerHTML text="OwO" align="right" max-width="840"></fitted-text>
-        <img id="topBarInfoIcon" src="icons/microphone.svg">
-    </div>
-
-    <div id="nextUp" class="sceneWrapper">
-        <div class="sceneTitle nextUpTitle">NEXT UP</div>
-        <div id="teamAInfo" class="teamInfo">
-            <div class="teamImage" id="teamAImage"></div>
-            <fitted-text class="teamName" id="teamAName" text="WHOa GAMERS!!!" max-width="450" align="right"></fitted-text>
-        </div>
-
-        <div class="versus">VS</div>
-
-        <div id="teamBInfo" class="teamInfo">
-            <div class="teamImage" id="teamBImage"></div>
-            <fitted-text class="teamName" id="teamBName" text="WHOa GAMERS!!!" max-width="450" align="left"></fitted-text>
-        </div>
-    </div>
-
-    <div id="nextMaps" class="sceneWrapper">
-        <div class="sceneTitle nextMapsTitle">upcoming stages</div>
-        <div id="upcomingStagesGrid" class="upcomingStagesGrid">
-
-        </div>
-    </div>
-
-    <div id="sceneSchedule" class="sceneWrapper">
-        <div class="sceneTitle nextMapsTitle">stream schedule</div>
-        <div class="scheduleZoneLabels">
-            <div class="scheduleRoundTimes">
-                <div class="scheduleRoundTime">ET</div>
-                <div class="scheduleRoundTime">GMT</div>
-            </div>
-        </div>
-        <div class="scheduleGrid">
-
-        </div>
-    </div>
-
-    <div id="squidarrowswrapper">
-        <img src="squidarrowsTALL.png" id="squidarrows">
-    </div>
-
-    <script src="fitted-text.js"></script>
     <script src="../node_modules/gsap/dist/gsap.js"></script>
-    <script src="break.js"></script>
+    <script src="scripts/break.js"></script>
 </body>
 
 </html>
