--- a/graphics/break.html
+++ b/graphics/break.html
@@ -2,96 +2,129 @@
 <html lang="en">
 
 <head>
-    <!--
+	<!--
 	   All rights reserved, reuse not permitted.
 	  -->
-    <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+	<meta charset="UTF-8">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
 
-    <!--
-        Kosugi Maru (Japanese text)
-        Montserrat 700, 600, 400
-        Lemon/Milk
-        Font Awesome
-    -->
-    <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="fonts/lemon-milk.css">
-    <script src="https://kit.fontawesome.com/6346e13f8b.js" crossorigin="anonymous"></script>
+	<!--
+		Kosugi Maru (Japanese text)
+		Montserrat 700, 600, 400
+		Lemon/Milk
+		Font Awesome
+	-->
+	<link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="fonts/lemon-milk.css">
+	<script src="https://kit.fontawesome.com/6346e13f8b.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="styles/globals.css">
+	<link rel="stylesheet" href="styles/globals.css">
 	<link rel="stylesheet" href="styles/break/break.css">
-    <link rel="stylesheet" href="styles/break/main.css">
+	<link rel="stylesheet" href="styles/break/main.css">
+	<link rel="stylesheet" href="styles/break/topInfoBar.css">
 </head>
 
 <body>
-    <div class="arrows-background">
-        <div class="arrows"></div>
-        <div class="gradient"></div>
-    </div>
+<div class="arrows-background">
+	<div class="arrows"></div>
+	<div class="gradient"></div>
+</div>
 
-    <div class="scene main-scene">
-        <div class="side-logo flex-align-center">
-            <div class="brand">
-                <img src="img/li-logo-break-no-text.png">
-                <div>low ink</div>
-            </div>
-        </div>
-        <div class="scene-content">
-			<div class="main-container">
-				<fitted-text class="main-container-title" id="main-flavor-text" text="Welcome to Low Ink!" max-width="975"></fitted-text>
-				<div class="line"></div>
-				<div class="music">
-					<div class="icon flex-align-center">
-						<i class="fas fa-music"></i>
-					</div>
-					<div class="text">
-						<fitted-text id="main-artist" text="Squid Sisters" max-width="900"></fitted-text>
-						<fitted-text id="main-song" text="Spicy Calamari Inkantation" max-width="900"></fitted-text>
-					</div>
+<div class="scene main-scene">
+	<div class="side-logo flex-align-center">
+		<div class="brand">
+			<img src="img/li-logo-break-no-text.png">
+			<div>low ink</div>
+		</div>
+	</div>
+	<div class="scene-content">
+		<div class="main-container">
+			<fitted-text class="main-container-title" id="main-flavor-text" text="Welcome to Low Ink!"
+						 max-width="975"></fitted-text>
+			<div class="line"></div>
+			<div class="music">
+				<div class="icon flex-align-center">
+					<i class="fas fa-music"></i>
 				</div>
-
-				<div class="next-round-timer">
-					<div class="title">Stream resumes</div>
-					<div class="line"></div>
-					<div class="count" id="next-round-minutes">in <span class="count-minutes">??</span> minutes</div>
-					<div class="times"><span id="next-round-time-est">?? EST</span>, <span id="next-round-time-utc">?? UTC</span></div>
+				<div class="text">
+					<fitted-text id="main-artist" text="Squid Sisters" max-width="900"></fitted-text>
+					<fitted-text id="main-song" text="Spicy Calamari Inkantation" max-width="900"></fitted-text>
 				</div>
 			</div>
-			<div class="main-container">
-				<div class="main-container-title">Support us!</div>
+
+			<div class="next-round-timer">
+				<div class="title">Stream resumes</div>
 				<div class="line"></div>
-				<div class="support-row">
-					<i class="fab fa-twitter"></i>
-					<span>@IPLSplatoon</span>
-				</div>
-				<div class="support-row">
-					<i class="fab fa-discord"></i>
-					<span>IPLabs.ink/discord</span>
-				</div>
-				<div class="support-row">
-					<i class="fab fa-patreon"></i>
-					<span>patreon.com/IPLSplatoon</span>
-				</div>
-				<div class="support-row">
-					<i class="fas fa-globe"></i>
-					<span>IPLabs.ink</span>
-				</div>
+				<div class="count" id="next-round-minutes">in <span class="count-minutes">??</span> minutes</div>
+				<div class="times"><span id="next-round-time-est">?? EST</span>, <span
+					id="next-round-time-utc">?? UTC</span></div>
 			</div>
 		</div>
-    </div>
+		<div class="main-container">
+			<div class="main-container-title">Support us!</div>
+			<div class="line"></div>
+			<div class="support-row">
+				<i class="fab fa-twitter"></i>
+				<span>@IPLSplatoon</span>
+			</div>
+			<div class="support-row">
+				<i class="fab fa-discord"></i>
+				<span>IPLabs.ink/discord</span>
+			</div>
+			<div class="support-row">
+				<i class="fab fa-patreon"></i>
+				<span>patreon.com/IPLSplatoon</span>
+			</div>
+			<div class="support-row">
+				<i class="fas fa-globe"></i>
+				<span>IPLabs.ink</span>
+			</div>
+		</div>
+	</div>
+</div>
 
-	<script src="../node_modules/luxon/build/global/luxon.js"></script>
-    <script src="../node_modules/fitted-text/dist/fitted-text.js"></script>
-    <script src="../node_modules/gsap/dist/gsap.js"></script>
+<div class="info-bar-wrapper flex-align-center">
+	<div class="top-info-bar-accent"></div>
+	<div class="top-info-bar-background"></div>
 
-    <script src="scripts/globals.js"></script>
-    <script src="scripts/break/break.js"></script>
-    <script src="scripts/break/music.js"></script>
-    <script src="scripts/break/mainFlavorText.js"></script>
-    <script src="scripts/break/nextStageTimer.js"></script>
-	<script src="scripts/break/mainInfoSwitcher.js"></script>
-    <script src="scripts/break/background.js"></script>
+	<div class="top-info-bar flex-align-center">
+		<div class="info-row info-row-welcome flex-align-center">
+			Welcome to<span class="low-ink-small-logo"><img src="img/li-logo-break-no-text.png"></span><span
+			class="lemon-milk">Low Ink!</span>
+		</div>
+		<div class="info-row info-row-commentators flex-align-center">
+			<div class="commentators flex-align-center">
+				<i class="fas fa-microphone-alt"></i>&nbsp;<fitted-text id="info-row-casters-text" useInnerHTML text="Casters" max-width="1300"></fitted-text>
+			</div>
+			<div class="commentators flex-align-center">
+				<i class="fab fa-twitter"></i>&nbsp;<fitted-text id="info-row-casters-twitter-text" useInnerHTML text="Casters" max-width="1300"></fitted-text>
+			</div>
+		</div>
+		<div class="info-row flex-align-center">
+			<i class="fas fa-music" id="info-row-music-icon"></i>&nbsp;<fitted-text id="info-row-music-text" text="Music" max-width="1300"></fitted-text>
+		</div>
+	</div>
+</div>
+
+<div class="scene teams-scene">
+
+</div>
+
+<script src="../node_modules/luxon/build/global/luxon.js"></script>
+<script src="../node_modules/fitted-text/dist/fitted-text.js"></script>
+<script src="../node_modules/gsap/dist/gsap.js"></script>
+
+<script src="scripts/globals.js"></script>
+<script src="scripts/break/break.js"></script>
+<script src="scripts/break/music.js"></script>
+<script src="scripts/break/mainFlavorText.js"></script>
+<script src="scripts/break/nextStageTimer.js"></script>
+<script src="scripts/break/mainInfoSwitcher.js"></script>
+<script src="scripts/break/casters.js"></script>
+<script src="scripts/break/topInfoBar.js"></script>
+<script src="scripts/break/sceneSwitcher.js"></script>
+<script src="scripts/break/background.js"></script>
 </body>
 
 </html>
