--- a/graphics/break.html
+++ b/graphics/break.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="styles/globals.css">
 	<link rel="stylesheet" href="styles/break/break.css">
 	<link rel="stylesheet" href="styles/break/main.css">
+	<link rel="stylesheet" href="styles/break/teams.css">
 	<link rel="stylesheet" href="styles/break/topInfoBar.css">
 </head>
 
@@ -95,20 +96,58 @@
 		</div>
 		<div class="info-row info-row-commentators flex-align-center">
 			<div class="commentators flex-align-center">
-				<i class="fas fa-microphone-alt"></i>&nbsp;<fitted-text id="info-row-casters-text" useInnerHTML text="Casters" max-width="1300"></fitted-text>
+				<i class="fas fa-microphone-alt"></i>&nbsp;<fitted-text id="info-row-casters-text" useInnerHTML
+																		text="Casters" max-width="1300"></fitted-text>
 			</div>
 			<div class="commentators flex-align-center">
-				<i class="fab fa-twitter"></i>&nbsp;<fitted-text id="info-row-casters-twitter-text" useInnerHTML text="Casters" max-width="1300"></fitted-text>
+				<i class="fab fa-twitter"></i>&nbsp;<fitted-text id="info-row-casters-twitter-text" useInnerHTML
+																 text="Casters" max-width="1300"></fitted-text>
 			</div>
 		</div>
 		<div class="info-row flex-align-center">
-			<i class="fas fa-music" id="info-row-music-icon"></i>&nbsp;<fitted-text id="info-row-music-text" text="Music" max-width="1300"></fitted-text>
+			<i class="fas fa-music" id="info-row-music-icon"></i>&nbsp;<fitted-text id="info-row-music-text"
+																					text="Music"
+																					max-width="1300"></fitted-text>
 		</div>
 	</div>
 </div>
 
-<div class="scene teams-scene">
+<div class="scene teams-scene flex-align-center">
+	<div class="scene-content">
+		<div class="team flex-align-center">
+			<div class="accent"></div>
+			<div class="background"></div>
+			<div class="content-wrapper flex-align-center">
+				<div class="content first-team-content">
+					<fitted-text id="team-a-name" class="team-name" text="First Team!" max-width="445"></fitted-text>
+					<div class="teams-line"></div>
+					<div class="players" id="team-a-players">
 
+					</div>
+					<div class="team-image-wrapper flex-align-center">
+						<div class="team-image" id="team-a-image"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="versus">VS</div>
+		<div class="team flex-align-center">
+			<div class="accent"></div>
+			<div class="background"></div>
+			<div class="content-wrapper flex-align-center">
+				<div class="content second-team-content">
+					<fitted-text id="team-b-name" class="team-name" text="Second Team!" max-width="445"></fitted-text>
+					<div class="teams-line"></div>
+					<div class="players" id="team-b-players">
+
+					</div>
+					<div class="team-image-wrapper flex-align-center">
+						<div class="team-image" id="team-b-image"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
 <script src="../node_modules/luxon/build/global/luxon.js"></script>
@@ -122,6 +161,7 @@
 <script src="scripts/break/nextStageTimer.js"></script>
 <script src="scripts/break/mainInfoSwitcher.js"></script>
 <script src="scripts/break/casters.js"></script>
+<script src="scripts/break/teams.js"></script>
 <script src="scripts/break/topInfoBar.js"></script>
 <script src="scripts/break/sceneSwitcher.js"></script>
 <script src="scripts/break/background.js"></script>
