--- a/graphics/break.html
+++ b/graphics/break.html
@@ -171,7 +171,6 @@
 <script src="../node_modules/gsap/dist/gsap.js"></script>
 
 <script src="scripts/globals.js"></script>
-<script src="scripts/break/stages.js"></script>
 <script src="scripts/break/break.js"></script>
 <script src="scripts/break/music.js"></script>
 <script src="scripts/break/mainFlavorText.js"></script>
@@ -181,6 +180,7 @@
 <script src="scripts/break/teams.js"></script>
 <script src="scripts/break/topInfoBar.js"></script>
 <script src="scripts/break/sceneSwitcher.js"></script>
+\<script src="scripts/break/stages.js"></script>
 <script src="scripts/break/background.js"></script>
 </body>
 
