ability to hide music

--- a/graphics/break.html
+++ b/graphics/break.html
@@ -44,7 +44,7 @@
 		<div class="main-container">
 			<fitted-text class="main-container-title" id="main-flavor-text" text="Welcome to Low Ink!"
 						 max-width="975"></fitted-text>
-			<div class="line"></div>
+			<div class="line" id="above-music-line"></div>
 			<div class="music">
 				<div class="icon flex-align-center">
 					<i class="fas fa-music"></i>
@@ -105,7 +105,7 @@
 																 text="Casters" max-width="1300"></fitted-text>
 			</div>
 		</div>
-		<div class="info-row flex-align-center">
+		<div class="info-row info-row-music flex-align-center">
 			<i class="fas fa-music" id="info-row-music-icon"></i>&nbsp;<fitted-text id="info-row-music-text"
 																					text="Music"
 																					max-width="1300"></fitted-text>
@@ -180,7 +180,7 @@
 <script src="scripts/break/teams.js"></script>
 <script src="scripts/break/topInfoBar.js"></script>
 <script src="scripts/break/sceneSwitcher.js"></script>
-\<script src="scripts/break/stages.js"></script>
+<script src="scripts/break/stages.js"></script>
 <script src="scripts/break/background.js"></script>
 </body>
 
