--- a/graphics/break.html
+++ b/graphics/break.html
@@ -171,6 +171,7 @@
 <script src="../node_modules/gsap/dist/gsap.js"></script>
 
 <script src="scripts/globals.js"></script>
+<script src="scripts/replicants.js"></script>
 <script src="scripts/break/break.js"></script>
 <script src="scripts/break/music.js"></script>
 <script src="scripts/break/mainFlavorText.js"></script>
