Main scene (It's really late!)

--- a/graphics/break.html
+++ b/graphics/break.html
@@ -153,13 +153,13 @@
 
 <div class="scene stages-scene flex-align-center">
 	<div class="stages-scoreboard">
-		<fitted-text id="team-a-name-scoreboard" max-width="400" text="BONGUS TEAMBONGUS TEAM"></fitted-text>
+		<fitted-text id="team-a-name-scoreboard" max-width="400" text=""></fitted-text>
 		<div class="scores">
 			<fitted-text id="team-a-score-scoreboard" max-width="50" text="0"></fitted-text>
 			<div></div>
 			<fitted-text id="team-b-score-scoreboard" max-width="50" text="0"></fitted-text>
 		</div>
-		<fitted-text id="team-b-name-scoreboard" max-width="400" text="BINGUS TEAM"></fitted-text>
+		<fitted-text id="team-b-name-scoreboard" max-width="400" text=""></fitted-text>
 	</div>
 	<div class="stages-grid" id="stages-grid">
 
