--- a/graphics/main.html
+++ b/graphics/main.html
@@ -47,6 +47,7 @@
 		</div>
 	</div>
 
+	<script src="../node_modules/lodash/lodash.min.js"></script>
 	<script src="../node_modules/fitted-text/dist/fitted-text.js"></script>
     <script src="../node_modules/gsap/dist/gsap.js"></script>
 
