Update teams scene with 3.0.0 changes

--- a/graphics/break.html
+++ b/graphics/break.html
@@ -167,6 +167,7 @@
 	</div>
 </div>
 
+<script src="../node_modules/lodash/lodash.min.js"></script>
 <script src="../node_modules/luxon/build/global/luxon.js"></script>
 <script src="../node_modules/fitted-text/dist/fitted-text.js"></script>
 <script src="../node_modules/gsap/dist/gsap.js"></script>
