--- a/graphics/break.html
+++ b/graphics/break.html
@@ -37,7 +37,10 @@
 	<div class="side-logo flex-align-center">
 		<div class="brand">
 			<img src="img/li-logo-break-no-text.png">
-			<div>low ink</div>
+			<div class="tournament-name">
+				<img src="img/ladder-badge.png">
+				<span class="tournament-name-text">low ink</span>
+			</div>
 		</div>
 	</div>
 	<div class="scene-content">
@@ -94,7 +97,7 @@
 	<div class="top-info-bar flex-align-center">
 		<div class="info-row info-row-welcome flex-align-center">
 			Welcome to<span class="low-ink-small-logo"><img src="img/li-logo-break-no-text.png"></span><span
-			class="lemon-milk">Low Ink!</span>
+			class="lemon-milk">Ladder Ink!</span>
 		</div>
 		<div class="info-row info-row-commentators flex-align-center">
 			<div class="commentators flex-align-center">
