--- a/graphics/main.html
+++ b/graphics/main.html
@@ -42,7 +42,7 @@
 			<div class="casters-content flex-align-center">
 				<div class="casters">
 				</div>
-				<div class="label">Commentators</div>
+				<div class="label" data-tl-key="mainCastersTitle">Commentators</div>
 			</div>
 		</div>
 	</div>
@@ -56,5 +56,6 @@
 	<script src="scripts/main/scoreboard.js"></script>
 	<script src="scripts/main/casters.js"></script>
 	<script src="scripts/RGBMode.js"></script>
+	<script src="scripts/i18n.js"></script>
 </body>
 </html>
