Add a title element to the bracket graphic; Switch to an experimental new layout for swiss brackets

--- a/graphics/bracket.html
+++ b/graphics/bracket.html
@@ -31,6 +31,10 @@
 	<div class="gradient"></div>
 </div>
 
+<div class="bracket-title">
+	<fitted-text id="bracket-title-text" align="center" max-width="1200" text=""></fitted-text>
+</div>
+
 <div id="bracket-container"></div>
 
 <script src="../node_modules/d3/dist/d3.min.js"></script>
