Support displaying elimination brackets

--- a/graphics/bracket.html
+++ b/graphics/bracket.html
@@ -42,6 +42,7 @@
 <script src="../node_modules/lodash/lodash.min.js"></script>
 <script src="../node_modules/luxon/build/global/luxon.js"></script>
 <script src="../node_modules/fitted-text/dist/fitted-text.js"></script>
+<script src="../node_modules/gsap/dist/DrawSVGPlugin.js"></script>
 <script src="../node_modules/gsap/dist/gsap.js"></script>
 
 <script src="scripts/globals.js"></script>
