--- a/graphics/main.html
+++ b/graphics/main.html
@@ -6,6 +6,10 @@
 	   All rights reserved, reuse not permitted.
 	  -->
     <meta charset="UTF-8">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="fonts/lemon-milk.css">
 	<link rel="stylesheet" href="styles/globals.css">
     <link rel="stylesheet" href="styles/main/main.css">
 </head>
