Replace twitter references with bsky or ambiguous icons

--- a/graphics/break.html
+++ b/graphics/break.html
@@ -68,19 +68,19 @@
 			<div class="main-container-title" data-tl-key="breakMainSupportUsTitle">Support us!</div>
 			<div class="line"></div>
 			<div class="support-row">
-				<i class="fab fa-twitter"></i>
-				<span>@IPLSplatoon</span>
+				<i class="fab fa-bluesky fa-fw"></i>
+				<span>@iplabs.ink</span>
 			</div>
 			<div class="support-row">
-				<i class="fab fa-discord"></i>
+				<i class="fab fa-discord fa-fw"></i>
 				<span>IPLabs.ink/discord</span>
 			</div>
 			<div class="support-row">
-				<i class="fab fa-patreon"></i>
+				<i class="fab fa-patreon fa-fw"></i>
 				<span>patreon.com/IPLSplatoon</span>
 			</div>
 			<div class="support-row">
-				<i class="fas fa-globe"></i>
+				<i class="fas fa-globe fa-fw"></i>
 				<span>IPLabs.ink</span>
 			</div>
 		</div>
@@ -102,7 +102,7 @@
 																		text="Casters" max-width="1300"></fitted-text>
 			</div>
 			<div class="commentators flex-align-center">
-				<i class="fab fa-twitter"></i>&nbsp;<fitted-text id="info-row-casters-twitter-text" useInnerHTML
+				<i class="fas fa-microphone-alt"></i>&nbsp;<fitted-text id="info-row-casters-twitter-text" useInnerHTML
 																 text="Casters" max-width="1300"></fitted-text>
 			</div>
 		</div>
